# hf_mcp

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.example.yaml  export_manifest.toml  pyproject.toml
.github/workflows/: publish-hf-mcp-pypi.yml
docs/: app.js  auth_bootstrap.md  client_integration.md  configuration.md  coverage_matrix.md  examples.md  export_boundary.md  hf_mcp_hf_launch_post.mycode  index.html  oauth_callback.html  security_model.md  styles.css  tool_overview.md
scripts/: build_release_dists.sh  check_pypi_version_available.py
skills/: README.md
skills/hf-api-v2/: SKILL.md
skills/hf-brotherhood-threads/: SKILL.md
skills/hf-brotherhood-threads/references/: BROTHERHOOD_THREAD_TEMPLATE.md
skills/hf-mcp/: SKILL.md
skills/hf-mcp-bootstrap/: SKILL.md
skills/hf-mcp-reads/: SKILL.md
skills/hf-mcp-writes/: SKILL.md
skills/hf-mycode/: SKILL.md
skills/hf-mycode/references/: MYCODE_REFERENCE.md
src/hf_mcp/: __init__.py  annotations.py  auth.py  capabilities.py  cli.py  config.py  dispatcher.py  flow.py  formatting_engine.py  forum_catalog.py  metadata.py  mycode.py  normalizers.py  onboarding.py  output_modes.py  registry.py  schemas.py  server.py  token_store.py  transport.py  write_preflight.py
src/hf_mcp/data/: forums_index.json
src/hf_mcp/tools/: drafts.py  formatting.py  forum_index.py  read_core.py  read_extended.py  write_documented.py
tests/: test_auth_transport.py  test_callback_page_asset.py  test_capability_policy.py  test_dispatcher_surface.py  test_docs_site.py  test_drafts.py  test_entrypoints.py  test_export_boundary.py  test_flow_envelope.py  test_formatting_engine.py  test_forum_catalog.py  test_forum_index.py  test_mycode.py  test_onboarding_cli.py  test_read_core.py  test_read_extended.py  test_registry_schemas.py  test_runtime_config.py  test_write_documented.py
