[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hf-mcp"
version = "0.1.9"
description = "Standalone Hack Forums MCP launch surface"
keywords = ["hackforums", "mcp", "model-context-protocol"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0", "mcp>=1.0.0"]

[project.scripts]
hf-mcp = "hf_mcp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
