[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hf-mcp"
version = "0.2.11"
description = "Standalone Hack Forums MCP launch surface"
keywords = ["hackforums", "mcp", "model-context-protocol"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0", "mcp>=1.0.0"]

[project.scripts]
hf-mcp = "hf_mcp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"docs" = ["docs/*.md"]
"skills/hf-api-v2" = ["skills/hf-api-v2/SKILL.md"]
"skills/hf-mcp" = ["skills/hf-mcp/SKILL.md"]
"skills/hf-mcp-bootstrap" = ["skills/hf-mcp-bootstrap/SKILL.md"]
"skills/hf-mcp-reads" = ["skills/hf-mcp-reads/SKILL.md"]
"skills/hf-mcp-writes" = ["skills/hf-mcp-writes/SKILL.md"]
"skills/hf-mycode" = ["skills/hf-mycode/SKILL.md"]
